--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,600;0,700;1,200;1,300;1,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" type="text/css">
     <title>Web student call centre com</title>
 </head>
 <body>
-    <section class="title_block">
+    <section id="about_us" class="title_block">
         <div class="title_img">
             <img src="http://www.pressagiar.pe/images/bg-breadcrumb-15-1920x238.jpg" alt="title image"> 
             <div class="title_txt">
@@ -17,5 +21,19 @@
         </div>
         
     </section>
+    <section class="route">
+        <a href="#"><h3>Home</h3></a>
+        <div class="icon_arrow"> 
+           <i style="color: grey; font-size: 14px;" class="fas fa-chevron-right"></i>
+        </div>
+        <a href="#about_us"><h3>About</h3></a>
+        <div class="icon_arrow"> 
+            <i style="color: grey; font-size: 14px;" class="fas fa-chevron-right"></i>
+         </div>
+        <a href="#about_us"><h3 id="about_black">About_us</h3></a>
+    </section>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.js" integrity="sha256-2JRzNxMJiS0aHOJjG+liqsEOuBb6++9cY4dSOyiijX4=" crossorigin="anonymous"></script>
+
 </body>
 </html>
