--- a/index.html
+++ b/index.html
@@ -33,7 +33,26 @@
         <a href="#about_us"><h3 id="about_black">About_us</h3></a>
     </section>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.js" integrity="sha256-2JRzNxMJiS0aHOJjG+liqsEOuBb6++9cY4dSOyiijX4=" crossorigin="anonymous"></script>
+    <section class="offering">
+        <img src="https://livedemo00.template-help.com/wt_prod-8697/images/about-1-601x350.jpg" alt="offer_image" class="offer_img">
+      
+        <div class="offer_content">
+            <div class="offer_button">
+                <button id="buttonf">WHAT WE DO</button>
+                <button id="buttons">OUR MISSION</button>
+                <button id="buttont">OUR GOAL</button>
+            </div>
+            <div id="what_do">
+                <h3 id="offer_h">Top Quality Call Center Services</h3>
+                 <p id="offer_p">CallLogic is a leading provider of contact center and customer relationship management services throughout North America, Europe, and Asia.
+                     We possess years of demonstrable experience in delivering desired business outcomes for our clients, across industries with our best-in-class outbound, inbound and web enabled outsourcing services to improve your reputation and give your clients efficient support.
+                </p>
+            </div>
+            
+        </div>
+    </section>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.js" integrity="sha256-2JRzNxMJiS0aHOJjG+liqsEOuBb6++9cY4dSOyiijX4=" crossorigin="anonymous"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
