--- a/index.html
+++ b/index.html
@@ -52,6 +52,57 @@
         </div>
     </section>
 
+    <section class="team">
+
+        <h2>Meet Our Team</h2>
+        <div class="flex_cart">
+            <div class="info_cart">
+                <img src="https://livedemo00.template-help.com/wt_prod-8697/images/team-1-230x211.jpg" alt="member_image">
+                <h1>Iren Liberman</h1>
+                <h3>support</h3>
+                <div class="line"></div>
+                <div class="info_icon">
+                    <a href="#contact">
+                        <i class="fab fa-facebook"></i>
+                    </a>
+                    <a href="#contact"><i class="fab fa-twitter"></i></a>
+                    <a href="#contact"><i class="fab fa-google-plus-g"></i></a>
+                    <a href="#contact"><i class="fab fa-pinterest-p"></i></a> 
+                </div>
+            </div>
+
+            <div class="info_cart">
+                <img src="https://livedemo00.template-help.com/wt_prod-8697/images/team-2-230x211.jpg" alt="member_image">
+                <h1>Erik Kripke</h1>
+                <h3>CEO “CallLogic”</h3>
+                <div class="line"></div>
+                <div class="info_icon">
+                    <a href="#contact">
+                        <i class="fab fa-facebook"></i>
+                    </a>
+                    <a href="#contact"><i class="fab fa-twitter"></i></a>
+                    <a href="#contact"><i class="fab fa-google-plus-g"></i></a>
+                    <a href="#contact"><i class="fab fa-pinterest-p"></i></a> 
+                </div>
+            </div>
+
+            <div class="info_cart">
+                <img src="https://livedemo00.template-help.com/wt_prod-8697/images/team-3-230x211.jpg" alt="member_image">
+                <h1>Emily Rose</h1>
+                <h3>support</h3>
+                <div class="line"></div>
+                <div class="info_icon">
+                    <a href="#contact">
+                        <i class="fab fa-facebook"></i>
+                    </a>
+                    <a href="#contact"><i class="fab fa-twitter"></i></a>
+                    <a href="#contact"><i class="fab fa-google-plus-g"></i></a>
+                    <a href="#contact"><i class="fab fa-pinterest-p"></i></a> 
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.js" integrity="sha256-2JRzNxMJiS0aHOJjG+liqsEOuBb6++9cY4dSOyiijX4=" crossorigin="anonymous"></script>
     <script src="./index.js"></script>
 </body>
