--- a/index.html
+++ b/index.html
@@ -102,6 +102,40 @@
             </div>
         </div>
     </section>
+    <section class="fact">
+        <h1 class="fact_heading">Some Facts About Us</h1>
+        <h4 class="fact_disc">More than 100,000 happy clients</h4>
+        <div class="fact_count">
+            <div class="fact_count_block">
+                <h1>1.6k</h1>
+                <div class="fact_line">
+                </div>
+                <h4>specialists</h4>
+            </div>
+            <div class="fact_count_block">
+                <h1>700</h1>
+                <div class="fact_line">
+                </div>
+                <h4>Annual Clients</h4>
+            </div>
+            <div class="fact_count_block">
+                <h1>11</h1>
+                <div class="fact_line">
+                </div>
+                <h4>Industry Awards</h4>
+            </div>
+            <div class="fact_count_block">
+                <h1>99%</h1>
+                <div class="fact_line">
+                </div>
+                <h4>Satisfied customers</h4>
+            </div>
+        </div>
+    </section>
+
+    <section style="height: 50vh;">
+
+    </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.js" integrity="sha256-2JRzNxMJiS0aHOJjG+liqsEOuBb6++9cY4dSOyiijX4=" crossorigin="anonymous"></script>
     <script src="./index.js"></script>
