--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,600;0,700;1,200;1,300;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" type="text/css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+
     <title>Web student call centre com</title>
 </head>
 <body>
@@ -132,10 +134,41 @@
             </div>
         </div>
     </section>
-
-    <section style="height: 50vh;">
-
+    <section class="clients">
+        <h1 class="client_heading">
+            Our Clients
+        </h1>
+        <div class="flex_client">
+            <div class="client_cart">
+                <div class="client_detail">
+                    <img src="https://livedemo00.template-help.com/wt_prod-8697/images/client-2-95x95.jpg" alt="client image">
+                    <div class="name">
+                        <h3>Jane Allison,</h3>
+                        <h3 style="color: rgb(80, 198, 245);">Founder, “iStep Ltd”</h3>
+                    </div>
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis lorem ut libero malesuada feugiat.
+                     Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, sit amet ligula.
+                </p>
+            </div>
+            <div class="client_cart">
+                <div class="client_detail">
+                    <img src="https://livedemo00.template-help.com/wt_prod-8697/images/client-1-95x95.jpg" alt="client image 2">
+                    <div class="name">
+                        <h3> Michael Johnson,</h3>
+                        <h3 style="color: rgb(80, 198, 245);">CEO “WoodExpert”</h3>
+                    </div>
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis lorem ut libero malesuada feugiat.
+                     Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, sit amet ligula.  
+              </p>
+            </div>
+        </div>
+       
     </section>
+   
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.js" integrity="sha256-2JRzNxMJiS0aHOJjG+liqsEOuBb6++9cY4dSOyiijX4=" crossorigin="anonymous"></script>
     <script src="./index.js"></script>
