--- a/index.html
+++ b/index.html
@@ -168,6 +168,13 @@
         </div>
        
     </section>
+    <section class="logos">
+        <img src="https://livedemo00.template-help.com/wt_prod-8697/images/brand-1-126x68.png" alt="logo_1">
+        <img src="https://livedemo00.template-help.com/wt_prod-8697/images/brand-2-126x100.png" alt="logo_2">
+        <img src="https://livedemo00.template-help.com/wt_prod-8697/images/brand-3-134x83.png" alt="logo_3">
+        <img src="https://livedemo00.template-help.com/wt_prod-8697/images/brand-4-138x55.png" alt="logo_4">
+
+    </section>
    
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.js" integrity="sha256-2JRzNxMJiS0aHOJjG+liqsEOuBb6++9cY4dSOyiijX4=" crossorigin="anonymous"></script>
