--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <section class="route">
         <a href="#"><h3>Home</h3></a>
         <div class="icon_arrow"> 
-           <i style="color: grey; font-size: 14px;" class="fas fa-chevron-right"></i>
+           <i style="color: grey; font-size: 14px; margin-bottom: 5px;" class="fas fa-chevron-right"></i>
         </div>
         <a href="#about_us"><h3>About</h3></a>
         <div class="icon_arrow"> 
-            <i style="color: grey; font-size: 14px;" class="fas fa-chevron-right"></i>
+            <i style="color: grey; font-size: 14px; margin-bottom: 5px;" class="fas fa-chevron-right"></i>
          </div>
         <a href="#about_us"><h3 id="about_black">About_us</h3></a>
     </section>
