--- a/index.html
+++ b/index.html
@@ -175,6 +175,64 @@
         <img src="https://livedemo00.template-help.com/wt_prod-8697/images/brand-4-138x55.png" alt="logo_4">
 
     </section>
+
+    <section id="contact">
+        <div class="contact_about">
+            <h2>ABOUT US</h2>
+            <div style="margin: 5px; width: 45px; border-top: 4px solid skyblue;" class="fact_line"></div>
+            <p>CallLogic offers reliable & affordable <br>
+                 call center services of superior quality <br>
+                  to companies in and out of the USA.
+            </p>
+            <button>GET IN TOUCH</button>
+        </div>
+
+
+        <div class="contact_info">
+            <h2>CONTACT INFORMATION</h2>
+            <div style="margin: 5px; width: 45px; border-top: 4px solid skyblue;" class="fact_line"></div>
+                <p>24\7 support:</p> 
+                <h4 id="contact_number">1-800-700-6200</h4>
+                <p>E-mail:</p>
+                <h3 id="contact_number">mail@demolink.org</h3>
+                 <p> Follow Us:</p>
+                <div  class="icons">
+                    <a href="#"><i style="font-size: 24px; margin-right: 4px; color: rgb(82, 82, 224);" class="fab fa-facebook"></i></a>
+                    <a href="#"><i style="font-size: 24px; margin-right: 4px; color: skyblue;" class="fab fa-twitter"></i></a>
+                    <a href="#"><i style="font-size: 24px; margin-right: 4px; color: rgb(212, 109, 109);" class="fab fa-google-plus-g"></i></a>
+                    <a href="#"><i style="font-size: 24px; margin-right: 4px; color: rgb(207, 53, 79);" class="fab fa-instagram"></i></a>
+                </div>
+            
+        </div>
+
+        <div class="contact_useful">
+            <h2>USEFUL LINKS</h2>
+            <div style="margin: 5px; width: 45px; border-top: 4px solid skyblue;" class="fact_line"></div>
+            <div class="useful">
+                <div class="useful_left">
+                    <p class="useful_p">Customer Support</p>
+                    <p class="useful_p">Inquiry Handling</p>
+                    <p class="useful_p">Lead Generation</p>
+                    <p class="useful_p">Telemarketing Services</p>
+                    <p class="useful_p">Information Verification</p>    
+                </div>
+                <div class="useful_right">
+                    <p class="useful_p">Consulting</p>
+                    <p class="useful_p">About Us</p>
+                    <p class="useful_p">Services</p>
+                    <p class="useful_p">Blog</p>
+                </div>    
+            </div>
+
+        </div>
+
+
+    </section>
+
+    <section class="copywrite">
+        <h3 class="copy_txt">©  2021 CallLogic. Privacy Policy</h3>
+        <h3 class="copy_txt">FAQ | Get in Touch </h3>
+    </section>
    
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.js" integrity="sha256-2JRzNxMJiS0aHOJjG+liqsEOuBb6++9cY4dSOyiijX4=" crossorigin="anonymous"></script>
